<resources>
    <!-- Globals -->
    <string name="app_name">Music Player</string>

    <string name="app_producer">OxygenApp</string>
    <string name="true_tag">true</string>
    <string name="false_tag">false</string>
    <string name="queue_tag">queue</string>
    <string name="random_tag">random</string>
    <string name="index_tag">index</string>
    <string name="default_time">0:00</string>

    <!-- Images Descriptions -->
    <string name="launcher_image_description">Music Player Logo</string>
    <string name="play_or_pause_circle_description">Play or pause</string>
    <string name="next_song_description">Next song</string>
    <string name="previous_song_description">Previous song</string>
    <string name="change_mode_description">Change mode to random</string>
    <string name="change_mode_random_description">Change mode to index random</string>
    <string name="change_mode_index_random_description">Change mode to queue</string>
    <string name="repeat_mode_description">Repeat current song</string>
    <string name="no_favorite_icon_description">No favourite</string>
    <string name="favorite_icon_description">Favourite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Tabs titles -->
    <string name="played_tab">Played</string>
    <string name="tracks_list_tab">Tracks</string>
    <string name="history_list_tab">History</string>
</resources>
